[workspace]
members = ["crates/*"]

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto = "thin"

[workspace.dependencies]
anyhow = "1.0"
