[package]
name = "ddda_save"

edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
endian_codec = "0.1.1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
